<resources>
    <string name="app_name">When2Leave</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="Register">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to Sign Up -->
    <string name="SignUp">Sign Up</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="UserName">Username</string>
    <string name="EmailAddress">Email Address</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="HomeAddress">Home Address</string>
    <string name="StreetNumber">Street Number</string>
    <string name="StreetName">Street Name</string>
    <string name="City">City</string>
    <string name="State">State</string>
    <string name="ZipCode">Zip Code</string>
    <string name="createAccount">Create Account</string>
    <string name="Password">Password - At least 7 character long</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="EmailOrUserName">Email or Username</string>
    <string name="UsedUsername">Username is taken</string>
    <string name="PasswordNotMatch">Password does not match</string>


    <!-- Strings related to Welcome Screen -->
    <string name="Welcome">Welcome, %1$s </string>
    <string name="createEvent">Create Event</string>
    <string name="viewEvent">View Event</string>
    <string name="editEvent">Edit Event</string>

    <!-- Strings related to Create Event Screen -->
    <string name="EventName">Event Name</string>
    <string name="EventLocation">Event Location</string>
    <string name="DefaultLocation">Your Default Location</string>
    <string name="When">When</string>
    <string name="Time">Time</string>
    <string name="Date">Date</string>
    <string name="Description">Description</string>
    <string name="CreateEvent">Create Event</string>
    <string name="FindLocation">Find Your Event Location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string-array name="menus">
        <item>Home</item>
        <item>Create Event</item>
        <item>View Event</item>
    </string-array>
    <string name="title_activity_maps">Map</string>

</resources>
